# erp_palent_odoo_test

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
addons/library_management/: __manifest__.py
addons/library_management/controllers/: main.py
addons/library_management/models/: __init__.py  book.py  rent.py
addons/library_management/security/: ir.model.access.csv
addons/library_management/views/: book_views.xml  rent_views.xml
addons/library_management/wizard/: __init__.py  rent_wizard.py  rent_wizard_views.xml
config/: odoo.conf
